# nRF_Modular

./: readme.md
BLE_LED_BLINK/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf  readme.md
BLE_LED_BLINK/.cache/clangd/index/: LED_service_functions.c.8ACEFD26282B450E.idx  LED_service_functions.h.E5E20848326553D8.idx  ble_advertise.c.9C8845D14F9ECAE5.idx  ble_advertise.h.64E85DBE935018C7.idx  ble_operations.c.D7DD099DC8BD079A.idx  ble_operations.h.2018C395FD56B242.idx  ble_service.c.AC30F6C497FD29CD.idx  ble_service.h.C18D39C34687C439.idx  gpio_operations.c.FEB1CC628C915871.idx  gpio_operations.h.F38915DD9B93C239.idx  headers.h.B2EB018B1967F057.idx  main.c.567893BC9B477880.idx
BLE_LED_BLINK/src/: LED_service_functions.c  LED_service_functions.h  ble_advertise.c  ble_advertise.h  ble_operations.c  ble_operations.h  ble_service.c  ble_service.h  gpio_operations.c  gpio_operations.h  headers.h  main.c
hello_arduino_BLE/.cache/clangd/index/: main.c.F095B2CEA9E8986C.idx
led_blink/: CMakeLists.txt  prj.conf  readme.md
led_blink/.cache/clangd/index/: gpio_operations.c.DBE87E580E56FC71.idx  gpio_operations.h.9F994B464142487F.idx  headers.h.A1F786BA974986B8.idx  main.c.CE5EAE2DBFCEB3A4.idx
led_blink/src/: gpio_operations.c  gpio_operations.h  headers.h  main.c
